[package]
name = "kyf_log"
version = "0.1.0"
authors = ["keyongfeng <keyongfeng@guanghe.tv>"]
edition = "2018"
description = "log tool"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
env_logger = "0.8.3"
log = "0.4.14"
serde_json = "1.0.64"
